--- a/frontend/agri-price-tracker/src/app/components/home/home.component.html
+++ b/frontend/agri-price-tracker/src/app/components/home/home.component.html
@@ -163,7 +163,7 @@
             </div>
             <div class="stat-item">
               <div class="stat-number">156</div>
-              <div class="stat-label">Crops Tracked</div>
+              <div class="stat-label">Crops and other Products Tracked</div>
             </div>
             <div class="stat-item">
               <div class="stat-number">47</div>
