served commodity category and unit to frontend part

--- a/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
+++ b/frontend/agri-price-tracker/src/app/components/public-portal/public-portal.component.html
@@ -182,7 +182,7 @@
                   </td>
                   <td>
                     <div class="price-cell">
-                      <strong>KSh {{ crop.currentPrice }}/kg</strong>
+                      <strong>KSh {{ crop.currentPrice }}/{{ crop.unit }}</strong>
                     </div>
                   </td>
                   <td>
